Fix css Collapse

--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -6,7 +6,7 @@ article.collapse {
 
 article.collapse div {
     width: 92%;
-    padding: 20px 20px;
+    padding: 20px 4%;
     border-radius: 10px;
 }
 
